# ciis_program_1

./: .gitignore  BERNSTEIN_ANALYSIS.TXT  CMakeLists.txt  README  main.cpp
OUTPUTS/: pa1-debug-a-error-analysis.txt  pa1-debug-a-output_us.txt  pa1-debug-b-error-analysis.txt  pa1-debug-b-output_us.txt  pa1-debug-c-error-analysis.txt  pa1-debug-c-output_us.txt  pa1-debug-d-error-analysis.txt  pa1-debug-d-output_us.txt  pa1-debug-e-error-analysis.txt  pa1-debug-e-output_us.txt  pa1-debug-f-error-analysis.txt  pa1-debug-f-output_us.txt  pa1-debug-g-error-analysis.txt  pa1-debug-g-output_us.txt  pa1-unknown-i-output-us.txt
OUTPUTS_PA2/: pa2-debug-a-error-analysis.txt  pa2-debug-a-output2-us.txt  pa2-debug-b-error-analysis.txt  pa2-debug-b-output2-us.txt  pa2-debug-c-error-analysis.txt  pa2-debug-c-output2-us.txt  pa2-debug-d-error-analysis.txt  pa2-debug-d-output2-us.txt  pa2-debug-e-error-analysis.txt  pa2-debug-e-output2-us.txt  pa2-debug-f-error-analysis.txt  pa2-debug-f-output2-us.txt  pa2-unknown-g-output2-us.txt  pa2-unknown-h-output2-us.txt  pa2-unknown-i-output2-us.txt  pa2-unknown-j-output2-us.txt
OUTPUTS_PA2_NO_CORRECTION/: pa2-debug-a-error-analysis.txt  pa2-debug-a-output2-us.txt  pa2-debug-b-error-analysis.txt  pa2-debug-b-output2-us.txt  pa2-debug-c-error-analysis.txt  pa2-debug-c-output2-us.txt  pa2-debug-d-error-analysis.txt  pa2-debug-d-output2-us.txt  pa2-debug-e-error-analysis.txt  pa2-debug-e-output2-us.txt  pa2-debug-f-error-analysis.txt  pa2-debug-f-output2-us.txt
OUTPUTS_UNKNOWN/: pa1-unknown-h-output-us.txt  pa1-unknown-j-output-us.txt  pa1-unknown-k-output-us.txt
geometry/: cal_body_parser.h  cal_readings_parser.h  calibration.h  (+8 more)
(+2 files in other folders)
